another attempt to fix white space when orientation change and ios 8 issue, relates #1 #2 #3 #4

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,6 +1,5 @@
 *{
   margin:0;
-  overflow:hidden;
 }
 
 a{
@@ -10,8 +9,11 @@ a{
   width:3rem;
 }
 
-body{
+html, body{
+  width:100%;
   height: 100%;
+  overflow:hidden;
+  position:fixed;
 }
 
 footer{
@@ -28,10 +30,17 @@ footer{
   -ms-transform: translateY(100%);
   -o-transform: translateY(100%);
   transition: all 0.8s ease-in;
+  -webkit-transition: all 0.8s ease-in;
+  -moz-transition: all 0.8s ease-in;
+  -o-transition: all 0.8s ease-in; /* ms-transition does not exist*/
 }
 
 .visible{
   transform:translateY(0);
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
 }
 
 footer .link{
@@ -96,5 +105,3 @@ footer .link .svg{
  background-color:#000;
  display:block;
 }
-
-
